# unity-rust-authoritative-security-sandbox

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  justfile
.github/workflows/: docker-ci.yml  rust-ci.yml
config/: default.toml  docker.toml
crates/bot/: Cargo.toml
crates/bot/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/investigation/: Cargo.toml
crates/investigation-api/: Cargo.toml
crates/investigation-api/src/: main.rs
crates/investigation/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/validation/: Cargo.toml
crates/validation/src/: lib.rs
dashboard/: dashboard.js  index.html  styles.css
docs/: architecture.md  bot.md  docker.md  evidence-model.md  false-positives.md  hit-validation.md  investigation-api.md  investigation-dashboard.md  investigation-database.md  investigation-workflow.md  network-timing.md  operations.md  protocol-firewall.md  protocol.md  release-process.md  rule-catalog.md  server.md  session-lifecycle.md  telemetry.md  threat-model.md  unity-client.md  unity-scene.md  validation-engine.md
reports/: evidence.json  investigation.db
scripts/: docker-demo.sh
unity-client/Assets/Scenes/: Main.unity
unity-client/Assets/ScriptableObjects/: RustServerSettings.asset
unity-client/Assets/Scripts/Networking/: RustJsonMessages.cs  (+6 more)
unity-client/ProjectSettings/: ProjectSettings.asset
(+1 files in other folders)
